# SMCrypto

./: Makefile.am  README.md  configure.ac
smd/: Makefile.am  logic.cpp  logic.hpp  main.cpp
smd/proto/: smd.pb.cc  smd.pb.h  smd.proto
xayagame/rpc-stubs/: gamerpcclient.h  gamerpcserverstub.h  xayarpcclient.h  xayarpcserverstub.h
